WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133666
AX: WK2: iOS: text editing does not work
https://bugs.webkit.org/show_bug.cgi?id=133666
Summary
AX: WK2: iOS: text editing does not work
chris fleizach
Reported
2014-06-09 16:47:31 PDT
The right accessibility hooks are not implemented to handle text editing on a WK2 only world <
rdar://problem/17127741
>
Attachments
patch
(3.89 KB, patch)
2014-06-09 16:53 PDT
,
chris fleizach
mario
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2014-06-09 16:53:19 PDT
Created
attachment 232748
[details]
patch
Mario Sanchez Prada
Comment 2
2014-06-10 10:17:21 PDT
Comment on
attachment 232748
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232748&action=review
> Source/WebCore/ChangeLog:3 > + AX: WK2: iOS: text editing does not work with
with what? :)
chris fleizach
Comment 3
2014-06-10 10:18:04 PDT
(In reply to
comment #2
)
> (From update of
attachment 232748
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=232748&action=review
> > > Source/WebCore/ChangeLog:3 > > + AX: WK2: iOS: text editing does not work with > > with what? :)
Doh! will fix. thanks
chris fleizach
Comment 4
2014-06-10 10:19:49 PDT
http://trac.webkit.org/changeset/169747
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug